fixed bamboo header on smaller screens

--- a/css/home.css
+++ b/css/home.css
@@ -13,17 +13,16 @@ nav {
 
 /* HEADER */
 .header {
-  /* background: url("../images/bamboo_ink.jpg"); */
-  /* background: url("../images/bamboo_ink_objects/background.jpg"); */
-  /* background-size: 79rem; */
+  background-color: #eae2cf;
   height: 36rem;
   font-size: 10rem;
   position: relative;
   display: flex;
+	z-index:-2;
 }
 #headerText {
   padding-top: 12.5rem;
-  padding-left: 7.5rem;
+  padding-left: 12.5rem;
   position: absolute;
 }
 #headerText h1 {
@@ -47,6 +46,10 @@ nav {
 }
 #headerHill {
   margin-top: -3.3rem;
+	left:0;
+}
+#headerLeaves, #headerBranch{
+	right:0;
 }
 #bgColor {
   z-index: -2;
@@ -86,29 +89,29 @@ header .bold {
   margin-top: 8rem;
   margin-bottom: 4rem;
   text-align: center;
-	padding-left:8rem;
-	padding-right:8rem;
+  padding-left: 8rem;
+  padding-right: 8rem;
 }
 .features h1 {
-	margin-bottom:3rem;
+  margin-bottom: 3rem;
 }
 .features img {
   width: 4.5rem;
   margin: auto;
-	margin-bottom:1rem;
+  margin-bottom: 1rem;
 }
 .features p {
   font-size: 1rem;
 }
-.features .col{
-	padding-left:3rem;
-	padding-right:3rem;
+.features .col {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .projectScope {
   padding-top: 10rem;
   padding-bottom: 5rem;
-	margin-bottom:5rem;
+  margin-bottom: 5rem;
   background-color: #15151d;
   color: white;
 }
